--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -8,6 +8,7 @@
         "help": "Show Help",
         "trans": "Change Map Transparency",
         "share": "Share",
+        "hide_marker": "Hide Markers",
         "border": "Show Map Border"
     },
     "html": {
@@ -42,6 +43,7 @@
         "help_etc_help": "<img src='parts/help.png'> Button: Showing this help.",
         "help_share_help": "<img src='parts/share.png'> Button: You can share this application to SNS etc.",
         "help_etc_border": "<img src='parts/border.png'> Button: Showing map border lines.<br>You can also switch the map by clicking inside the boundary. <br> On a PC, select a map with a mouse over and switch the map with a click, on a smartphone, select a map with a click and switch the map with one more click.",
+        "help_etc_hide_marker": "<img src='parts/hide_marker.png'> Button: Toggles the display / hide of markers.<br>When you press and hold the button, a screen to display / hide for each marker layer is displayed.",
         "help_etc_slider": "<img src='parts/slider.png'> Slider: Switch the transparency of the displayed map so that the background map can be seen through. <br>It operates only while displaying the historical/illustrated maps, it does not work when displaying the base maps.",
         "share_title": "Share",
         "share_app_title": "Share this application",
