レイヤー毎の表示非表示切替UI実装

--- a/locales/ja/translation.json
+++ b/locales/ja/translation.json
@@ -48,7 +48,8 @@
         "share_title": "共有",
         "share_app_title": "このアプリを共有",
         "share_state_title": "現在の表示場所を共有",
-        "share_copy": "コピー"
+        "share_copy": "コピー",
+        "hide_marker_title": "マーカーレイヤー表示切替"
     },
     "app": {
         "fake_explanation": "※%1$s中心より%2$dkm以上離れている場合は、%1$s中心周辺の疑似経緯度を発行します。",
