--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -48,7 +48,8 @@
         "share_title": "Share",
         "share_app_title": "Share this application",
         "share_state_title": "Share current viewpoint",
-        "share_copy": "Copy"
+        "share_copy": "Copy",
+        "hide_marker_title": "Toggle marker layer display / hide"
     },
     "app" : {
         "fake_explanation": "NOTE: If GPS result is more than %2$f km away from %1$s, the system issue a pseudo-coordinate around %1$s.",
