--- a/locales/ja/translation.json
+++ b/locales/ja/translation.json
@@ -31,7 +31,7 @@
         "help_title": "Maplat ヘルプ",
         "help_using_maplat": "このサイトはオープンソース古地図ビューア<a href='https://github.com/code4nara/Maplat/wiki' target='_blank'>Maplat</a>を使って構築されています。",
         "help_operation_title": "地図の操作方法",
-        "help_operation_content": "地図の移動はPCの場合はマウスのドラッグ、スマートフォンの場合は指でのスワイプ動作で行います。<br>地図の拡大縮小は、PCでは左上の<img src='parts/plus.png'> <img src='parts/minus.png'>ボタン、スマートフォンでは2本指でのピンチインアウトで行います。<br>スマートフォンでは2本指でのひねる操作により、地図の回転も行えます。<br>左上の<img src='parts/home.png'>ボタンを使うと、表示中の地図のホームポジションに移動できます。<br><img src='parts/compass.png'>ボタン上に表示されているコンパスは、現在の北の方角を示しており、またこのボタンを押すことによって、地図の回転状態を正位置に戻すことができます。",
+        "help_operation_content": "地図の移動はPCの場合はマウスのドラッグ、スマートフォンの場合は指でのスワイプ動作で行います。<br>地図の拡大縮小は、PCでは左上の<img src='{{plus.png}}'> <img src='parts/minus.png'>ボタン、スマートフォンでは2本指でのピンチインアウトで行います。<br>スマートフォンでは2本指でのひねる操作により、地図の回転も行えます。<br>左上の<img src='parts/home.png'>ボタンを使うと、表示中の地図のホームポジションに移動できます。<br><img src='parts/compass.png'>ボタン上に表示されているコンパスは、現在の北の方角を示しており、またこのボタンを押すことによって、地図の回転状態を正位置に戻すことができます。",
         "help_selection_title": "地図の変更方法",
         "help_selection_content": "画面の左下と右下に、<img src='parts/overlay.png'>このようなサムネイル付きのスライダが表示されていますが、これで表示する地図を選択することができます。<br>左右にスライドして表示したい地図を選び、クリックするとその地図の表示に切り替えられます。<br>左下の地図スライダはベースマップ(正確な地図)、右下の地図スライダは絵地図や古地図を選ぶものになっています。",
         "help_gps_title": "地図上への現在地表示",
